@@ -418,6 +418,9 @@ abstract class BaseShipmentPeer {
 	 */
 	public static function clearRelatedInstancePool()
 	{
+		// Invalidate objects in ShipmentReleasePeer instance pool, 
+		// since one or more of them may be deleted by ON DELETE CASCADE/SETNULL rule.
+		ShipmentReleasePeer::clearInstancePool();
 	}
 
 	/**
@@ -1267,6 +1270,7 @@ abstract class BaseShipmentPeer {
 			// use transaction because $criteria could contain info
 			// for more than one table or we could emulating ON DELETE CASCADE, etc.
 			$con->beginTransaction();
+			$affectedRows += ShipmentPeer::doOnDeleteCascade(new Criteria(ShipmentPeer::DATABASE_NAME), $con);
 			$affectedRows += BasePeer::doDeleteAll(ShipmentPeer::TABLE_NAME, $con, ShipmentPeer::DATABASE_NAME);
 			// Because this db requires some delete cascade/set null emulation, we have to
 			// clear the cached instance *after* the emulation has happened (since
@@ -1299,24 +1303,14 @@ abstract class BaseShipmentPeer {
 		}
 
 		if ($values instanceof Criteria) {
-			// invalidate the cache for all objects of this type, since we have no
-			// way of knowing (without running a query) what objects should be invalidated
-			// from the cache based on this Criteria.
-			ShipmentPeer::clearInstancePool();
 			// rename for clarity
 			$criteria = clone $values;
 		} elseif ($values instanceof Shipment) { // it's a model object
-			// invalidate the cache for this single object
-			ShipmentPeer::removeInstanceFromPool($values);
 			// create criteria based on pk values
 			$criteria = $values->buildPkeyCriteria();
 		} else { // it's a primary key, or an array of pks
 			$criteria = new Criteria(self::DATABASE_NAME);
 			$criteria->add(ShipmentPeer::ID, (array) $values, Criteria::IN);
-			// invalidate the cache for this object(s)
-			foreach ((array) $values as $singleval) {
-				ShipmentPeer::removeInstanceFromPool($singleval);
-			}
 		}
 
 		// Set the correct dbName
@@ -1329,6 +1323,23 @@ abstract class BaseShipmentPeer {
 			// for more than one table or we could emulating ON DELETE CASCADE, etc.
 			$con->beginTransaction();
 			
+			// cloning the Criteria in case it's modified by doSelect() or doSelectStmt()
+			$c = clone $criteria;
+			$affectedRows += ShipmentPeer::doOnDeleteCascade($c, $con);
+			
+			// Because this db requires some delete cascade/set null emulation, we have to
+			// clear the cached instance *after* the emulation has happened (since
+			// instances get re-added by the select statement contained therein).
+			if ($values instanceof Criteria) {
+				ShipmentPeer::clearInstancePool();
+			} elseif ($values instanceof Shipment) { // it's a model object
+				ShipmentPeer::removeInstanceFromPool($values);
+			} else { // it's a primary key, or an array of pks
+				foreach ((array) $values as $singleval) {
+					ShipmentPeer::removeInstanceFromPool($singleval);
+				}
+			}
+			
 			$affectedRows += BasePeer::doDelete($criteria, $con);
 			ShipmentPeer::clearRelatedInstancePool();
 			$con->commit();
@@ -1337,6 +1348,38 @@ abstract class BaseShipmentPeer {
 			$con->rollBack();
 			throw $e;
 		}
+	}
+
+	/**
+	 * This is a method for emulating ON DELETE CASCADE for DBs that don't support this
+	 * feature (like MySQL or SQLite).
+	 *
+	 * This method is not very speedy because it must perform a query first to get
+	 * the implicated records and then perform the deletes by calling those Peer classes.
+	 *
+	 * This method should be used within a transaction if possible.
+	 *
+	 * @param      Criteria $criteria
+	 * @param      PropelPDO $con
+	 * @return     int The number of affected rows (if supported by underlying database driver).
+	 */
+	protected static function doOnDeleteCascade(Criteria $criteria, PropelPDO $con)
+	{
+		// initialize var to track total num of affected rows
+		$affectedRows = 0;
+
+		// first find the objects that are implicated by the $criteria
+		$objects = ShipmentPeer::doSelect($criteria, $con);
+		foreach ($objects as $obj) {
+
+
+			// delete related ShipmentRelease objects
+			$criteria = new Criteria(ShipmentReleasePeer::DATABASE_NAME);
+			
+			$criteria->add(ShipmentReleasePeer::SHIPMENTID, $obj->getId());
+			$affectedRows += ShipmentReleasePeer::doDelete($criteria, $con);
+		}
+		return $affectedRows;
 	}
 
 	/**
